--- a/app/src/main/res/layout/teacher_login.xml
+++ b/app/src/main/res/layout/teacher_login.xml
@@ -143,4 +143,16 @@
         app:layout_constraintTop_toBottomOf="@+id/teacherMailtxt"
         app:layout_constraintVertical_bias="0.702" />
 
+    <ImageView
+        android:id="@+id/backArrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.077"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back_arrow" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
