--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -108,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:fontFamily="@font/merrybold"
-            android:text="Feedback: "
+            android:text="Message: "
             android:textColor="@color/colorAccent"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
